fix auth not unlocking protected routes
