# routes/users.js
@@ -5,19 +5,46 @@ const users = require('../controllers/user');
 const { requireAuth } = require('../middleware/auth');
 
 // GET /users (protected)
-router.get('/', requireAuth, users.getAllUsers);
+router.get(
+  '/',
+  requireAuth,
+  /* #swagger.security = [{ "BearerAuth": [] }] */
+  users.getAllUsers
+);
 
 // GET /users/:id (protected)
-router.get('/:id', validateId, requireAuth, users.getUserById);
+router.get(
+  '/:id',
+  validateId,
+  requireAuth,
+  /* #swagger.security = [{ "BearerAuth": [] }] */
+  users.getUserById
+);
 
 // POST /users (protected)
-router.post('/', requireAuth, users.createUser);
+router.post(
+  '/',
+  requireAuth,
+  /* #swagger.security = [{ "BearerAuth": [] }] */
+  users.createUser
+);
 
 // PUT /users/:id (protected)
-router.put('/:id', validateId, requireAuth, users.updateUser);
+router.put(
+  '/:id',
+  validateId,
+  requireAuth,
+  /* #swagger.security = [{ "BearerAuth": [] }] */
+  users.updateUser
+);
 
 // DELETE /users/:id (protected)
-router.delete('/:id', validateId, requireAuth, users.deleteUser);
+router.delete(
+  '/:id',
+  validateId,
+  requireAuth,
+  /* #swagger.security = [{ "BearerAuth": [] }] */
+  users.deleteUser
+);
 
 module.exports = router;
-
